--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ng2-archwizard",
+  "name": "ng2-archwizard-temp-angular5",
   "version": "3.0.0-develop",
   "license": "MIT",
-  "description": "An angular 2+ module containing a wizard component and its supporting components and directives",
+  "description": "An angular 5+ module containing a wizard component and its supporting components and directives",
   "homepage": "https://github.com/madoar/ng2-archwizard",
   "author": {
     "name": "Marc Arndt",
