--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "ng2-archwizard-temp-angular5",
+  "name": "ng2-archwizard-temporary-angular5",
   "version": "3.0.0-develop",
   "license": "MIT",
-  "description": "An angular 5+ module containing a wizard component and its supporting components and directives",
+  "description": "This is for angular 5+ module it will be temporary NPM Package, once the real madoar repo is stable it will be deleted",
   "homepage": "https://github.com/madoar/ng2-archwizard",
   "author": {
     "name": "Marc Arndt",
@@ -10,10 +10,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/madoar/ng2-archwizard"
+    "url": "https://github.com/thorgod/ng2-archwizard"
   },
   "bugs": {
-    "url": "https://github.com/madoar/ng2-archwizard/issues"
+    "url": "https://github.com/thorgod/ng2-archwizard/issues"
   },
   "keywords": [
     "angular",
